@@ -73,6 +73,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25911: Restored support of bytes paths in os.walk() on Windows.
+
 - Issue #26045: Add UTF-8 suggestion to error message when posting a
   non-Latin-1 string with http.client.
 
